--- a/app/src/main/res/layout/item_daily_routine_add_card.xml
+++ b/app/src/main/res/layout/item_daily_routine_add_card.xml
@@ -10,7 +10,7 @@
         android:gravity="center">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/cl_daily_card"
+            android:id="@+id/cl_daily_routine_add_card"
             android:layout_width="280dp"
             android:layout_height="398dp"
             android:background="@drawable/shape_gray_fill_20_rect"
@@ -18,7 +18,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <TextView
-                android:id="@+id/tv_daily_card"
+                android:id="@+id/tv_daily_routine_add_card_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="84dp"
