#10 [fix] chip 버튼 1개씩 선택 로직 추가

--- a/app/src/main/res/layout/item_happy_add_list_chip.xml
+++ b/app/src/main/res/layout/item_happy_add_list_chip.xml
@@ -4,4 +4,5 @@
     style="@style/Style.Material3.Chip.Softie.Type"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:singleLine="true"
     android:text="@string/chip_item_happy_relationship" />
