--- a/app/src/main/res/layout/fragment_happy_routine.xml
+++ b/app/src/main/res/layout/fragment_happy_routine.xml
@@ -8,7 +8,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/background">
 
         <TextView
             android:id="@+id/tv_happy_routine_title"
