#8 [chore] 이미지 로드 이슈 해결

--- a/app/src/main/res/layout/item_daily_routine_add_theme.xml
+++ b/app/src/main/res/layout/item_daily_routine_add_theme.xml
@@ -13,8 +13,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:clickable="true">
+        android:layout_height="wrap_content">
 
         <FrameLayout
             android:id="@+id/fl_daily_routine_add_theme"
@@ -34,9 +33,19 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
+            <!--            <ImageView-->
+            <!--                android:id="@+id/iv_daily_routine_add_theme_icon"-->
+            <!--                setImage="@{data.iconImageUrl}"-->
+            <!--                android:layout_width="30dp"-->
+            <!--                android:layout_height="30dp"-->
+            <!--                android:layout_gravity="center"-->
+            <!--                android:src="@color/red"-->
+            <!--                app:layout_constraintBottom_toBottomOf="@id/iv_daily_routine_add_theme_background"-->
+            <!--                app:layout_constraintEnd_toEndOf="@id/iv_daily_routine_add_theme_background"-->
+            <!--                app:layout_constraintStart_toStartOf="@id/iv_daily_routine_add_theme_background"-->
+            <!--                app:layout_constraintTop_toTopOf="@id/iv_daily_routine_add_theme_background" />-->
             <ImageView
                 android:id="@+id/iv_daily_routine_add_theme_icon"
-                setImage="@{data.iconImageUrl}"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_gravity="center"
@@ -47,12 +56,23 @@
                 app:layout_constraintTop_toTopOf="@id/iv_daily_routine_add_theme_background" />
         </FrameLayout>
 
+        <!--        <TextView-->
+        <!--            android:id="@+id/tv_daily_routine_add_theme_name"-->
+        <!--            android:layout_width="wrap_content"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:layout_marginTop="6dp"-->
+        <!--            android:text="@{data.name}"-->
+        <!--            android:textAppearance="@style/caption1"-->
+        <!--            android:textColor="@color/gray400"-->
+        <!--            app:layout_constraintEnd_toEndOf="@id/fl_daily_routine_add_theme"-->
+        <!--            app:layout_constraintStart_toStartOf="@id/fl_daily_routine_add_theme"-->
+        <!--            app:layout_constraintTop_toBottomOf="@id/fl_daily_routine_add_theme"-->
+        <!--            tools:text="테마" />-->
         <TextView
             android:id="@+id/tv_daily_routine_add_theme_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="6dp"
-            android:text="@{data.name}"
             android:textAppearance="@style/caption1"
             android:textColor="@color/gray400"
             app:layout_constraintEnd_toEndOf="@id/fl_daily_routine_add_theme"
