--- a/app/src/main/res/layout/activity_daily_routine_add.xml
+++ b/app/src/main/res/layout/activity_daily_routine_add.xml
@@ -5,21 +5,25 @@
 
     <data>
 
+        <variable
+            name="viewModel"
+            type="com.sopetit.softie.ui.dailyroutine.dailyroutineadd.DailyRoutineAddViewModel" />
+
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.dailyroutine.dailyroutineadd.DailyRoutineAddActivity">
+        tools:context=".ui.dailyroutine.dailyroutineadd.DailyRoutineAddActivity"
+        android:fitsSystemWindows="true">
 
         <ImageView
             android:id="@+id/iv_daily_routine_add_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="18dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="40dp"
             android:background="@drawable/ic_daily_back"
-            app:layout_constraintEnd_toStartOf="@id/tv_daily_routine_add_name"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -28,12 +32,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
-            android:layout_marginEnd="201dp"
             android:includeFontPadding="false"
             android:text="@string/daily_routine_add_title"
             android:textAppearance="@style/body1"
             app:layout_constraintBottom_toBottomOf="@id/iv_daily_routine_add_back"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/iv_daily_routine_add_back"
             app:layout_constraintTop_toTopOf="@id/iv_daily_routine_add_back" />
 
@@ -60,13 +62,11 @@
             android:id="@+id/vp_daily_routine_add_card"
             android:layout_width="match_parent"
             android:layout_height="398dp"
-            android:layout_marginTop="27dp"
-            android:layout_marginBottom="180dp"
             android:clipChildren="false"
             android:clipToPadding="false"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="27dp"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/v_daily_routine_add_line" />
 
         <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
@@ -90,7 +90,6 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="55dp"
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="34dp"
             android:background="@drawable/shape_black_fill_20_rect"
@@ -99,8 +98,7 @@
             android:textColor="@color/gray000"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/di_daily_routine_add_indicator" />
+            app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
