--- a/app/src/main/res/layout/fragment_onboarding_choice_theme.xml
+++ b/app/src/main/res/layout/fragment_onboarding_choice_theme.xml
@@ -25,13 +25,16 @@
             android:id="@+id/rv_onboarding_choice_theme"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:layout_marginHorizontal="21dp"
             android:layout_marginTop="34dp"
             android:layout_marginBottom="21dp"
-            android:layout_marginHorizontal="21dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/iv_onboarding_choice_theme_title_bear"
+            android:overScrollMode="never"
             app:layout_constraintBottom_toTopOf="@id/btn_onboarding_choice_theme"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.512"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/iv_onboarding_choice_theme_title_bear"
+            app:layout_constraintVertical_bias="1.0"
             tools:listitem="@layout/item_onboarding_choice_theme" />
 
         <androidx.appcompat.widget.AppCompatButton
