#8 [feat] : 리사이클러뷰 클릭이벤트 색깔 바뀌게

--- a/app/src/main/res/layout/item_daily_routine_add_theme.xml
+++ b/app/src/main/res/layout/item_daily_routine_add_theme.xml
@@ -6,8 +6,8 @@
     <data>
 
         <variable
-            name="data"
-            type="com.sopetit.softie.domain.entity.Theme" />
+            name="dailyRoutineAddViewModel"
+            type="com.sopetit.softie.ui.dailyroutine.dailyroutineadd.DailyRoutineAddViewModel" />
 
     </data>
 
