--- a/app/src/main/res/layout/activity_daily_routine_edit.xml
+++ b/app/src/main/res/layout/activity_daily_routine_edit.xml
@@ -7,7 +7,7 @@
         <import type="android.view.View" />
 
         <variable
-            name="dailyRoutineEditViewModel"
+            name="viewModel"
             type="com.sopetit.softie.ui.dailyroutine.dailyroutineedit.DailyRoutineEditViewModel" />
 
     </data>
@@ -16,7 +16,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fitsSystemWindows="true">
+        android:fitsSystemWindows="true"
+        android:background="@color/background">
 
         <TextView
             android:id="@+id/tv_daily_routine_edit_name"
@@ -46,7 +47,7 @@
             android:id="@+id/v_daily_routine_edit_blank"
             android:layout_width="match_parent"
             android:layout_height="2dp"
-            android:visibility="@{dailyRoutineEditViewModel.routineAddList.size() == 0 ? View.VISIBLE : View.GONE}"
+            android:visibility="@{viewModel.routineAddList.size() == 0 ? View.VISIBLE : View.GONE}"
             app:layout_constraintTop_toBottomOf="@id/tv_daily_routine_edit_name" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -56,7 +57,7 @@
             android:layout_marginHorizontal="20dp"
             android:layout_marginTop="10dp"
             android:background="@drawable/shape_white_fill_gray100_stroke_20_rect"
-            android:visibility="@{dailyRoutineEditViewModel.routineAddList.size() >= 1 ? View.VISIBLE : View.GONE}"
+            android:visibility="@{viewModel.routineAddList.size() >= 1 ? View.VISIBLE : View.GONE}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_daily_routine_edit_name">
@@ -157,7 +158,7 @@
             android:layout_marginHorizontal="20dp"
             android:layout_marginTop="8dp"
             android:background="@drawable/shape_white_fill_gray100_stroke_20_rect"
-            android:visibility="@{dailyRoutineEditViewModel.routineAddList.size() >= 2 ? View.VISIBLE : View.GONE}"
+            android:visibility="@{viewModel.routineAddList.size() >= 2 ? View.VISIBLE : View.GONE}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/cl_daily_routine_edit_first">
@@ -257,7 +258,7 @@
             android:layout_marginHorizontal="20dp"
             android:layout_marginTop="8dp"
             android:background="@drawable/shape_white_fill_gray100_stroke_20_rect"
-            android:visibility="@{dailyRoutineEditViewModel.routineAddList.size() == 3 ? View.VISIBLE : View.GONE}"
+            android:visibility="@{viewModel.routineAddList.size() == 3 ? View.VISIBLE : View.GONE}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/cl_daily_routine_edit_second">
@@ -358,7 +359,7 @@
             android:layout_marginTop="8dp"
             android:background="@drawable/shape_gray200_line_20_rect"
             android:clickable="true"
-            android:visibility="@{dailyRoutineEditViewModel.routineAddList.size() == 3 ? View.GONE : View.VISIBLE}"
+            android:visibility="@{viewModel.routineAddList.size() == 3 ? View.GONE : View.VISIBLE}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/cl_daily_routine_edit_third">
@@ -375,33 +376,18 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btn_daily_routine_edit_delete_nothting"
+            android:id="@+id/btn_daily_routine_edit_delete_nothing"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="20dp"
             android:layout_marginBottom="32dp"
-            android:background="@drawable/shape_gray200_fill_12_rect"
+            android:background="@{viewModel.isEditBtnEnabled ? @drawable/shape_red_fill_12_rect : @drawable/shape_gray200_fill_12_rect}"
+            android:clickable="@{viewModel.isEditBtnEnabled ? true : false}"
+            android:enabled="@{viewModel.isEditBtnEnabled ? true : false}"
             android:minHeight="0dp"
             android:paddingTop="20dp"
             android:paddingBottom="18dp"
             android:text="@string/daily_routine_edit_delete_nothing"
-            android:textAppearance="@style/body1"
-            android:textColor="@color/gray000"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btn_daily_routine_edit_delete"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="20dp"
-            android:layout_marginBottom="32dp"
-            android:background="@drawable/shape_red_fill_12_rect"
-            android:minHeight="0dp"
-            android:paddingTop="20dp"
-            android:paddingBottom="18dp"
-            android:text="@string/daily_routine_edit_delete"
             android:textAppearance="@style/body1"
             android:textColor="@color/gray000"
             app:layout_constraintBottom_toBottomOf="parent"
